--- a/next.html
+++ b/next.html
@@ -1,1 +1,10 @@
-
+<html> 
+    <head> 
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"> 
+        <title>i3D Hardware Challenge</title> 
+        <style type="text/css"> html{ margin: 0; height: 100%; overflow: hidden; } div{ position: absolute; left:0; right:0; bottom:0; top:0; border:0; } </style> 
+    </head> 
+    <body> 
+        <div style="width:100%; text-align:left;" ><iframe  src="https://www.eventbrite.ca/e/v24-navigating-china-tickets-38896771290?ref=eweb" frameborder="0" height="1000" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true"></iframe><div style="font-family:Helvetica, Arial; font-size:12px; padding:10px 0 5px; margin:2px; width:100%; text-align:left;" ><a class="powered-by-eb" style="color: #ADB0B6; text-decoration: none;" target="_blank" href="http://www.eventbrite.ca/">Powered by Eventbrite</a></div></div>
+    </body> 
+</html>
