--- a/directory.html
+++ b/directory.html
@@ -1,7 +1,7 @@
 <html> 
     <head> 
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"> 
-        <title>Hardware Lagos: Next Event</title> 
+        <title>Hardware Lagos: A Nigerian Hardware Directory</title> 
     </head> 
     <body> 
         <div style="width:100%; text-align:left;" ><iframe class="airtable-embed" src="https://airtable.com/embed/shrpHIwo17aRPnFln?backgroundColor=gray" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ccc;"></iframe></div>
