--- a/directory.html
+++ b/directory.html
@@ -1,5 +1,15 @@
 <html> 
     <head> 
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-111628260-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-111628260-1');
+</script>
+
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"> 
         <title>Hardware Lagos: A Nigerian Hardware Directory</title> 
     </head> 
